--- a/src/main/resources/data/theshapeshifterbyxboxscontentnw/forge/biome_modifier/shapeshifter_wolf_biome_modifier.json
+++ b/src/main/resources/data/theshapeshifterbyxboxscontentnw/forge/biome_modifier/shapeshifter_wolf_biome_modifier.json
@@ -1,11 +1,20 @@
 {
   "type": "forge:add_spawns",
-  "biomes": {
-    "type": "forge:any"
-  },
+  "biomes": [
+    "birch_forest",
+    "dark_forest",
+    "forest",
+    "old_growth_birch_forest",
+    "windswept_forest",
+    "old_growth_pine_taiga",
+    "old_growth_spruce_taiga",
+    "snowy_taiga",
+    "taiga",
+    "grove"
+  ],
   "spawners": {
     "type": "theshapeshifterbyxboxscontentnw:shapeshifter_wolf",
-    "weight": 20,
+    "weight": 4,
     "minCount": 1,
     "maxCount": 1
   }
