--- a/src/main/resources/data/theshapeshifterbyxboxscontentnw/forge/biome_modifier/shapeshifter_watch_biome_modifier.json
+++ b/src/main/resources/data/theshapeshifterbyxboxscontentnw/forge/biome_modifier/shapeshifter_watch_biome_modifier.json
@@ -4,7 +4,7 @@
     "type": "forge:any"
   },
   "spawners": {
-    "type": "theshapeshifterbyxboxscontentnw:shapeshifter_on_wall",
+    "type": "theshapeshifterbyxboxscontentnw:shapeshifter_watch",
     "weight": 20,
     "minCount": 1,
     "maxCount": 1
